# aries-faucet

./: .gitignore
aries-faucet-agent/: .env  Cargo.toml
aries-faucet-agent/docs/: openapi.yaml
aries-faucet-agent/src/: logging.rs  main.rs
aries-faucet-agent/src/application/: error.rs  mod.rs
aries-faucet-agent/src/application/service/: mod.rs  service_connections.rs
aries-faucet-agent/src/application/storage/: connections.rs  db_util.rs  filters.rs  mod.rs
aries-faucet-agent/src/config/: mod.rs
aries-faucet-agent/src/server/: mod.rs  response.rs
aries-faucet-agent/src/server/api/: api_connections.rs  api_health.rs  mod.rs
aries-faucet-client-js/: package-lock.json  package.json
aries-faucet-client-js/src/: client.js  index.js
aries-faucet-client-js/test/common/: config-loader.js
aries-faucet-client-js/test/integration/: connections.js
aries-faucet-ui/: .env  package-lock.json  package.json
aries-faucet-ui/src/: App.js  ConnectionsTable.js  api-client.js  client.js  index.js  proxy.js
