[package]
name = "aries-faucet"
version = "0.0.1"
edition = "2018"
license-file = "LICENSE"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4.16"
env_logger = "0.9.0"
chrono = "0.4.19"

# actix with tokio 1.x
actix-web = { version = "4.0.1", features = [ "rustls" ] }
actix-cors = "0.6"

tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }

futures = "0.3.21"

bson = "2.1.0"
mongodb = "2.1.0"

lazy_static = "1.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
serde_qs = { version = "0.9.1", features = ["actix4"] }

async-trait = "0.1.52"

envconfig = "0.6.0"
envconfig_derive = "0.6.0"
dotenv = "0.15.0"

thiserror = "1.0"
anyhow = "1.0"

uuid = "0.8.2"

rustls = "0.20.4"
rustls-pemfile = "0.3.0"



